[gd_scene load_steps=4 format=3 uid="uid://csxkw4cyiqtqx"]

[ext_resource type="Script" path="res://MINIGAMES/minijeu_template/game.gd" id="1_okbpp"]
[ext_resource type="PackedScene" uid="uid://dr5dxii37bh6t" path="res://MINIGAMES/minijeu_template/player.tscn" id="3_3wrx1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s08fp"]

[node name="Node" type="Node"]
script = ExtResource("1_okbpp")

[node name="player" parent="." instance=ExtResource("3_3wrx1")]
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)

[node name="win_area" type="Area2D" parent="."]
position = Vector2(2.08165e-12, 324)

[node name="win" type="ColorRect" parent="win_area"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="win_area"]
position = Vector2(50, 50)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_s08fp")

[node name="lose_area" type="Area2D" parent="."]
position = Vector2(1052, 324)

[node name="lose" type="ColorRect" parent="lose_area"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lose_area"]
position = Vector2(50, 50)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_s08fp")

[connection signal="area_entered" from="win_area" to="." method="_on_win_area_area_entered"]
[connection signal="area_entered" from="lose_area" to="." method="_on_lose_area_area_entered"]
